Fix bug 450650:  URL encoded chars in feed-entry-link-href become invalid - replaced by question marks

Fix store encoding url

FIXED-IN: 5.19.3
BUG: 450650